# tomlfmt

./: .gitignore  README.md  pyproject.toml
tomlfmt/: cli.py
